# signifypy

./: .codecov.yaml  .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
.github/constraints/: integration.txt
.github/workflows/: release.yml  test.yaml
docs/: README.rst  changelog.md  conf.py  index.rst  maintainer_features.rst  releasing.md  signify_app.rst  signify_core.rst  signify_peer.rst
integration/: __init__.py
integration/app/: delegate.sh  integration.sh  integration_clienting.py  test_randy.ipynb
newsfragments/: 137.fixed.md  138.fixed.md
scripts/: README.md  create_agent.py  create_new_multisig_issuer.py  create_new_quartet.py  create_person_aid.py  credential.json  extract_changelog_section.py  init_agent.py  issue-ecr.sh  join_new_multisig_issuer.py  join_new_quadlet.py  list_contacts.py  list_ipex.py  list_kevers.py  list_multisig_credentials.py  list_notifications.py  list_person_credentials.py  multisig-create-credential.py  multisig-create-registry.py  multisig-endrole.py  multisig-holder.py  multisig-issuer-holder.py  multisig-kli-rotation.py  notifications.py  rename_registry.py  send_admit.py  single-issuer-holder.py  sync_integration_deps.py
scripts/data/: ecr-auth-data.json  ecr-data.json  legal-entity-data.json
src/signify/: __init__.py  signifying.py
src/signify/app/: aiding.py  challenging.py  clienting.py  contacting.py  coring.py  credentialing.py  delegating.py  ending.py  escrowing.py  exchanging.py  grouping.py  keeping.py  notifying.py  schemas.py  signaling.py  signifying.py
src/signify/app/cli/: signify.py  sigpy.py
src/signify/app/cli/commands/: agent.py  init.py  shell.py  status.py
src/signify/core/: api.py  authing.py  httping.py  keeping.py  keying.py
src/signify/keria_types/: __init__.py  common.py  operations.py
src/signify/peer/: exchanging.py
tests/: conftest.py  keri_ops.py  keria_api.py  test_e2e.py
tests/app/: connect.toml  delegation.toml  ecosystem.py  test_aiding.py  test_challenging.py  test_cli_status.py  test_clienting.py  test_contacting.py  test_coring.py  test_credentialing.py  test_delegating.py  test_ending.py  test_escrowing.py  test_exchanging.py  test_grouping.py  test_integration_helpers.py  test_integration_topology.py  test_notifying.py  test_schemas.py  test_signaling.py  witness.toml
tests/core/: test_authing.py  test_httping.py  test_keeping.py  test_keria_types.py  test_keria_types_drift.py  test_keying.py  test_versioning.py
tests/integration/: README.md  __init__.py  conftest.py  constants.py  dependencies.py  helpers.py  test_challenges.py  test_credentials.py  test_delegation.py  test_multisig.py  test_multisig_credentials.py  test_multisig_interactions.py  test_multisig_join.py  test_multisig_prior_next_ondex.py  test_provisioning_and_identifiers.py  test_signaling.py  test_stack_modes.py  topology.py
tests/integration/_services/: keria_server.py  vlei_server.py  witness_server.py
tests/peer/: test_exchanging.py
tests/schema/rules/: ecr-auth-rules.json  ecr-rules.json
tests/typecheck/: keria_types_contracts.py
