[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signifypy"
version = "0.4.0"
description = "SignifyPy: KERI Signing at the Edge"
readme = "README.md"
license = { text = "Apache Software License 2.0" }
authors = [
    { name = "Philip S. Feairheller", email = "pfeairheller@gmail.com" },
    { name = "Kent Bull", email = "kent@kentbull.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
keywords = [
    "signing at the edge",
    "signify",
    "secure attribution",
    "authentic data",
    "discovery",
    "resolver",
]
requires-python = ">=3.12.3"
dependencies = [
    "keri>=1.2.12,<1.3.0",
    "multicommand==1.0.0",
    "requests==2.32.3",
    "http_sfv==0.9.9",
    "sseclient>=0.0.27",
]

[project.urls]
Documentation = "https://signifypy.readthedocs.io/"
Changelog = "https://signifypy.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/WebOfTrust/signifypy/issues"
Source = "https://github.com/WebOfTrust/signifypy"

[project.optional-dependencies]
test = [
    "responses>=0.25.6",
    "coverage>=7.6.10",
    "pytest>=8.3.4",
    "mockito==1.5.3",
]
docs = [
    "myst-parser>=0.16.1",
    "sphinx>=4.3.2",
    "sphinx-rtd-theme>=1.2.2",
]

[dependency-groups]
dev = [
    "responses>=0.25.6",
    "coverage>=7.6.10",
    "pytest>=8.3.4",
    "mockito==1.5.3",
    "myst-parser>=0.16.1",
    "sphinx>=4.3.2",
    "sphinx-rtd-theme>=1.2.2",
]

[project.scripts]
sigpy = "signify.app.cli.sigpy:main"

[tool.hatch.build.targets.wheel]
packages = ["src/signify"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/pytest.ini",
    "/docs",
    "/scripts",
    "/src",
    "/tests",
]

[tool.uv]
default-groups = ["dev"]
