[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signifypy"
version = "0.4.1"
description = "SignifyPy: KERI Signing at the Edge"
readme = "README.md"
license = { text = "Apache Software License 2.0" }
authors = [
    { name = "Philip S. Feairheller", email = "pfeairheller@gmail.com" },
    { name = "Kent Bull", email = "kent@kentbull.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
keywords = [
    "signing at the edge",
    "signify",
    "secure attribution",
    "authentic data",
    "discovery",
    "resolver",
]
requires-python = ">=3.12.3"
dependencies = [
    "keri>=1.2.12,<1.3.0",
    "multicommand==1.0.0",
    "requests==2.32.3",
    "http_sfv==0.9.9",
    "sseclient>=0.0.27",
]

[project.urls]
Documentation = "https://signifypy.readthedocs.io/"
Changelog = "https://signifypy.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/WebOfTrust/signifypy/issues"
Source = "https://github.com/WebOfTrust/signifypy"

[project.optional-dependencies]
test = [
    "responses>=0.25.6",
    "coverage>=7.6.10",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=6.1.1",
    "mockito==1.5.3",
]
docs = [
    "myst-parser>=0.16.1",
    "sphinx>=4.3.2",
    "sphinx-rtd-theme>=1.2.2",
]

[dependency-groups]
dev = [
    "responses>=0.25.6",
    "coverage>=7.6.10",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=6.1.1",
    "mockito==1.5.3",
    "myst-parser>=0.16.1",
    "sphinx>=4.3.2",
    "sphinx-rtd-theme>=1.2.2",
    "towncrier>=24.8.0",
]

[project.scripts]
sigpy = "signify.app.cli.sigpy:main"

[tool.hatch.build.targets.wheel]
packages = ["src/signify"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/pytest.ini",
    "/docs",
    "/scripts",
    "/src",
    "/tests",
]

[tool.uv]
default-groups = ["dev"]

[tool.towncrier]
package = "signify"
package_dir = "src"
directory = "newsfragments"
filename = "docs/changelog.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version}"
issue_format = "[#{issue}](https://github.com/WebOfTrust/signifypy/pull/{issue})"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
